# portfolio-service

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: deploy.yml
app/: auth.py  main.py
app/api/: routes.py
app/core/: config.py
app/db/: session.py
app/kafka/: consumer.py  producer.py
app/models/: __init__.py  position.py
app/schemas/: events.py  portfolio.py
app/services/: portfolio.py  pricing.py  wallet.py
migrations/: README  env.py
migrations/versions/: 0001_initial_portfolio_schema.py
tests/: conftest.py  test_api.py  test_events.py  test_migrations.py  test_pnl.py  test_pricing.py
